[gd_scene load_steps=6 format=3 uid="uid://dmyacifxq8ln1"]

[ext_resource type="Script" path="res://Classes/HUD/HUD.gd" id="1_4kvx0"]
[ext_resource type="Theme" uid="uid://bnaa8nx0gbxlb" path="res://DefaultTheme.tres" id="2_yj5an"]
[ext_resource type="PackedScene" uid="uid://dc5iuq7gwhsct" path="res://Classes/HUD/MostGrabsHUD/MostGrabsDisplay.tscn" id="3_4t555"]
[ext_resource type="FontFile" uid="uid://lksm03ik4w1w" path="res://alarm clock.ttf" id="4_flykf"]

[sub_resource type="LabelSettings" id="LabelSettings_sqvvv"]
font = ExtResource("4_flykf")
font_size = 72
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yj5an")
script = ExtResource("1_4kvx0")

[node name="EffectName" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.5
offset_top = 56.0
offset_right = 47.5
offset_bottom = 82.0
grow_horizontal = 2
theme = ExtResource("2_yj5an")
theme_override_font_sizes/font_size = 72
text = "Effect Name"
horizontal_alignment = 1

[node name="MostGrabsDisplay" parent="." instance=ExtResource("3_4t555")]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_top = -64.0
offset_bottom = -64.0
grow_vertical = 0

[node name="GameTime" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -64.0
offset_right = 20.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 72
text = "00.0"
label_settings = SubResource("LabelSettings_sqvvv")
horizontal_alignment = 1
vertical_alignment = 1
